# Server_Client

./: README.md
Client_QT/: CMakeLists.txt  build_app.sh  client.cpp  client.h  main.cpp  multimeterinterface.cpp  multimeterinterface.h  multimeterinterface.ui  run_app.sh
Server/: CMakeLists.txt  main.cpp  run_app.sh  utility.hpp
Server/COMMANDS/: CMakeLists.txt
Server/COMMANDS/include/: HandlerCommand.hpp
Server/COMMANDS/src/: HandlerCommand.cpp
Server/SERVER/: CMakeLists.txt
Server/SERVER/include/: Server.hpp
Server/SERVER/src/: server.cpp
